<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp" >

    <ScrollView
        android:id="@+id/ScrollView1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:overScrollMode="never"
        android:scrollbars="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/widget205"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical" >

                <ImageButton
                    android:id="@+id/image_button"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:contentDescription="@string/photo_description"
                    android:scaleType="centerCrop"
                    android:src="@drawable/cu_contacts_user_icon" >
                </ImageButton>

                <EditText
                    android:id="@+id/familyname"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:hint="@string/family_name_hint"
                    android:scrollbars="vertical" />

                <EditText
                    android:id="@+id/username"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:hint="@string/user_name_hint"
                    android:scrollbars="vertical" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_num_textview"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Spinner
                    android:id="@+id/phonetype"
                    android:layout_width="wrap_content"
                    android:layout_height="41dip"
                    android:layout_weight="1" />

                <EditText
                    android:id="@+id/mobilephone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="6"
                    android:gravity="top"
                    android:hint="@string/phone_hint"
                    android:inputType="phone"
                    android:scrollbars="vertical" />

                <Spinner
                    android:id="@+id/accountid"
                    android:layout_width="wrap_content"
                    android:layout_height="41dip"
                    android:layout_weight="1" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_textview"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Spinner
                    android:id="@+id/emailtype"
                    android:layout_width="wrap_content"
                    android:layout_height="41dip"
                    android:layout_weight="1" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="10"
                    android:gravity="top"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:scrollbars="vertical" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/im_textview"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Spinner
                    android:id="@+id/imtype"
                    android:layout_width="wrap_content"
                    android:layout_height="41dip"
                    android:layout_weight="1" />

                <EditText
                    android:id="@+id/im"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="9"
                    android:gravity="top"
                    android:hint="@string/im_hint"
                    android:scrollbars="vertical" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/postal_textview"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Spinner
                    android:id="@+id/addresstype"
                    android:layout_width="wrap_content"
                    android:layout_height="41dip"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:orientation="vertical" >

                    <EditText
                        android:id="@+id/street"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="top"
                        android:hint="@string/street_hint"
                        android:scrollbars="vertical" />

                    <EditText
                        android:id="@+id/post_office_box"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="top"
                        android:hint="@string/pobox_hint"
                        android:scrollbars="vertical" />

                    <EditText
                        android:id="@+id/neighborhoods"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="top"
                        android:hint="@string/neighborhoods_hint"
                        android:scrollbars="vertical" />

                    <EditText
                        android:id="@+id/city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="top"
                        android:hint="@string/city_hint"
                        android:scrollbars="vertical" />

                    <EditText
                        android:id="@+id/province"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="top"
                        android:hint="@string/region_hint"
                        android:scrollbars="vertical" />

                    <EditText
                        android:id="@+id/zip_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="top"
                        android:hint="@string/postcode_hint"
                        android:scrollbars="vertical" />

                    <EditText
                        android:id="@+id/country"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="top"
                        android:hint="@string/country_hint"
                        android:scrollbars="vertical" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/note_textview"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:hint="@string/note_hint"
                android:scrollbars="vertical" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/website_textview"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/website"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:hint="@string/website_hint"
                android:scrollbars="vertical" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/group_textview"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/group"
                android:layout_width="match_parent"
                android:layout_height="41dip" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_save"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_save" />

        <Button
            android:id="@+id/btn_return"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:text="@string/btn_cancel" />
    </LinearLayout>

</LinearLayout>