<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="6dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="6dp" >

            <CheckBox
                android:id="@+id/enable_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_enable" />

            <CheckBox
                android:id="@+id/sms_enable_receiver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sms_enable_receiver" />
        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:stretchColumns="1" >

            <TableRow>

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_num" />

                <EditText
                    android:id="@+id/semm_phone_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:hint="@string/please_write_phone_num" >
                </EditText>
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/textView23"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account_id" />

                <Spinner
                    android:id="@+id/semm_account_id"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp" >
                </Spinner>
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/textView33"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/semm_content" />

                <EditText
                    android:id="@+id/semm_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/please_write_sms_content" >
                </EditText>
            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/semm_send"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/semm_send" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

</ScrollView>